--- a/styles.css
+++ b/styles.css
@@ -196,18 +196,21 @@ html, body {
     z-index: 2;
 }
 
+/* styles.css */
 #player-hand {
+    display: none; /* Hide the player hand initially */
     position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
     height: 33vh;
-    display: flex;
+    /* display: flex; */ /* Comment this out or remove it */
     justify-content: center;
     align-items: flex-end;
     z-index: 5;
     overflow-x: auto;
 }
+
 
 #player-cards {
     display: flex;
